// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`withError HOC with error should return the errorMain component 1`] = `
<div>
  <h1>
    This is an error.
  </h1>
</div>
`;

exports[`withError HOC with no error should return the passed in component 1`] = `
<div>
  <h1>
    Hola
  </h1>
</div>
`;
